# COMP2870-Linear-Algebra

./: .gitignore  .nojekyll  .pre-commit-config.yaml  Makefile  README.md  _quarto.yml  index.html  index.qmd  justfile  mathjax.html  pyproject.toml  qmd_ruff.py  robots.txt  search.json  sitemap.xml  spellcheck.py  theorem.scss
.github/workflows/: publish.yml
site_libs/bootstrap/: bootstrap-2478dfaf21121e4abc1bf4c5fc5acc12.min.css  bootstrap-2f6d29f9f94f55da286944756da9211d.min.css  bootstrap-ccb7598c1076c02ad842cf9fb90770d1.min.css  bootstrap-cd77d2e2c272fd92c85b08b9b571e0ad.min.css  bootstrap-d8e115a44479f0200f9218f34455deac.min.css  bootstrap-dark-18d081f514c576145803a6470058a168.min.css  bootstrap-dark-57a138f0bb470e46bebdddd77a7e3455.min.css  bootstrap-dark-6543c591f586cb3d6e99e55162843527.min.css  bootstrap-dark-92bc1b8d687d0ada63d078189200d14b.min.css  bootstrap-dark-a4e1765ac18cbbee544c0487cb449ad2.min.css  bootstrap-dark-d18a424f302dbf51e51688c2950cc529.min.css  bootstrap-dark-e1296d290184cee5a0f44e6c4c60492d.min.css  bootstrap-e6991f6fb445b6bf3a4bff6b69c9af17.min.css  bootstrap-fcdc01ead29fbffdaec00249dfc3ebda.min.css
slides/: lec01.html  lec01.qmd  lec02.html  lec02.qmd  lec03.html  lec03.qmd  lec04.html  lec04.qmd  lec05.html  lec05.qmd  lec06.html  lec06.qmd  lec07.html  lec07.qmd
src/: lab01_floating-point-numbers.qmd  lec01.html  lec01.qmd  lec02.html  lec02.qmd  lec02a.html  lec02a.qmd  lec03.html  lec03.qmd  lec04.html  lec04.qmd  lec05.html  lec05.qmd  lec06.html  lec06.qmd  lec07.html  lec07.qmd  lec08.html  lec08.qmd  notes.html  notes.qmd
(+2 files in other folders)
