[project]
name = "COMP2870-Linear-Algebra-notes"
author = "Thomas Ranner"
version = "0.1.0"
description = "Notes for Linear Algebra part of COMP2870. School of Computer Science, University of Leeds"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "jupyter-cache>=1.0.1",
    "matplotlib>=3.10.0",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "quarto>=0.1.0",
    "scipy>=1.15.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.9.3",
]
